# Polymarket_Sentinal

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.pipeline  PLAN.md  README.md  config.yaml  docker-compose.yaml  pipeline.yaml  pyproject.toml
deploy/systemd/: polymarket-sentinel.service
scripts/: backtest.py  healthcheck.py  replay_alert.py  replay_stage.py
src/analyst/: __init__.py  __main__.py  agent.py  config.py  filters.py  worker.py
src/analyst/prompts/: system.py  templates.py
src/analyst/tools/: __init__.py  market_data.py  technicals.py
src/contracts/: __init__.py  analysis.py  common.py  execution.py  research.py  scout.py
src/executor/: __init__.py  __main__.py  agent.py  broker.py  config.py  server.py  worker.py
src/executor/prompts/: system.py  templates.py
src/executor/risk/: __init__.py  circuit_breaker.py  limits.py
src/outcome/: __init__.py  __main__.py  pricing.py  worker.py
src/pipeline/: __init__.py  approvals.py  config.py  db.py  health.py  idempotency.py  outcomes.py  queue.py  tracing.py
src/pipeline/migrations/: 001_postgres.sql  (+1 more)
src/researcher/: __init__.py  __main__.py  agent.py  config.py  server.py  worker.py
src/sentinel/: __init__.py  __main__.py  app.py  config.py
tests/: conftest.py  test_archiver.py  test_contracts.py  test_detector.py  test_enrichment.py  test_gatekeeper.py  test_notifications.py  test_price_signal.py  test_queue.py  test_retention.py  test_sqlite_store.py  test_ws_parser.py
tests/test_executor/: test_pipeline_flow.py
tests/test_researcher/: test_ingress.py
(+25 files in other folders)
