[project]
name = "polymarket-sentinel"
version = "0.1.0"
description = "24/7 Polymarket sentiment tracker"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
